# todo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/todo/: __init__.py  cli.py  core.py  models.py  storage.py
tests/: test_core.py  test_storage.py
