[project]
name = "todo"
version = "0.1.0"
description = "一个基于 JSON 存储的命令行待办清单工具"
readme = "README.md"
authors = [
    { name = "pengyu25", email = "2249526001@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.26.7",
]

[project.scripts]
todo = "todo.cli:app"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]

[tool.uv] 
link-mode = "copy"
